@@ -22,6 +22,10 @@
 /* Use this struct used to pass arguments to wrapper routines. */
 struct gdb_wrapper_arguments;
 
+extern int gdb_parse_exp_1 PARAMS ((char **, struct block *, 
+			     int, struct expression **));
+extern int wrap_parse_exp_1 PARAMS ((char *));
+
 extern int gdb_evaluate_expression PARAMS ((struct expression *, value_ptr *));
 extern int wrap_evaluate_expression PARAMS ((char *));
 
@@ -31,7 +35,13 @@ extern int wrap_value_fetch_lazy PARAMS ((char *));
 extern int gdb_value_equal PARAMS ((value_ptr, value_ptr, int *));
 extern int wrap_value_equal PARAMS ((char *));
 
+extern int gdb_value_subscript PARAMS ((value_ptr, value_ptr, value_ptr *));
+extern int wrap_value_subscript PARAMS ((char *));
+
 extern int gdb_value_ind PARAMS ((value_ptr val, value_ptr * rval));
 extern int wrap_value_ind PARAMS ((char *opaque_arg));
+
+extern int gdb_parse_and_eval_type (char *, int, struct type **);
+extern int wrap_parse_and_eval_type (char *);
 
 #endif /* WRAPPER_H */
